general refactor and app config handling